Added unicorn dependency for production

--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -120,3 +120,15 @@ test:
 
     # Ensure all times are UTC in the app side. (default: false)
     # use_utc: false
+
+production:
+  sessions:
+    default:
+      database: job_board_production
+      hosts:
+        - localhost:27017
+      options:
+        consistency: :strong
+
+  options:
+
